--- a/index.html
+++ b/index.html
@@ -10,6 +10,17 @@
     <title>Document</title>
 </head>
 <body>
-    PORCO DIO
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6393839379082196"
+     crossorigin="anonymous"></script>
+<!-- j -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-6393839379082196"
+     data-ad-slot="6203379485"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
 </body>
 </html>
