--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
     <title>Document</title>
 </head>
 <body>
+
+    HAHAHAHAHHAHAHAHAHHAHAHAHAHHAHAHAH
+    
 <ins class="adsbygoogle"
      style="display:block"
      data-ad-client="ca-pub-6393839379082196"
